--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
 
      <table>
        <tr>
-            <th class="name">name</th>
-            <th>age</th>
-            <th>last name</th>
+            <th class="a1">name</th>
+            <th class="a1">age</th>
+            <th class="a1">last name</th>
        </tr>
         <tr>
-             <td class="name">nika</td>
-             <td>16</td>
-             <td>antidze</td>
+             <td class="a2">nika</td>
+             <td class="a2">16</td>
+             <td class="a2">antidze</td>
         </tr>
         <tr>
-             <td class="name">lasha</td>
-             <td>45</td>
-             <td>lortqifanidze</td>
+             <td class="a3">lasha</td>
+             <td class="a3">45</td>
+             <td class="a3">lortqifanidze</td>
 
         </tr>
 
